#-------------------------------------------------------------------------------------------
# Copyright (C) Electronic Arts Inc.  All rights reserved.
#-------------------------------------------------------------------------------------------
add_library(EABase INTERFACE) 

target_include_directories(EABase INTERFACE include/Common)